--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,17 +6,27 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Home</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ng-container>
+  <ion-content [fullscreen]="true">
+    <ion-header collapse="condense">
+      <ion-toolbar>
+        <ion-title size="large">Home</ion-title>
+      </ion-toolbar>
+    </ion-header>
 
-  <div style="text-align: center;">
-    <h1>Welcome to Bunz/Trash App</h1>
-    <p>This app exists to inform the end user what is Bunz and what is trash.</p>
-    <p>Enjoy!</p>
-  </div>
+    <div style="text-align: center;" *ngIf="!isLoading">
+      <h1>Welcome to Bunz/Trash App</h1>
+      <p>This app exists to inform the end user what is Bunz and what is Trash.</p>
+      <p>Enjoy!</p>
+    </div>
 
-</ion-content>
+    <div style="text-align: center" *ngIf="isLoading">
+      <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
+      <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
+      <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
+      <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
+    </div>
+
+  </ion-content>
+</ng-container>
+
